# Claude

./: github_assistant.txt
.claude-plugin/: .claude-plugin.txt  marketplace.json
ai-driven_development/projecta1/: readme.md
ai-driven_development/sub_agents/: Part 1 - Hooks & Extensions.pptx  Part 2 - Hooks & Extensions.pptx  Wedding - Google Slides.url
cloud-native_ai/15-kubernetes-pod-communication/Kubernetes-Communication-Challenges/fastapi-apps/task-manager/: k8s-pod.yaml  pyproject.toml
cloud-native_ai/15-kubernetes-pod-communication/Kubernetes-Communication-Challenges/fastapi-apps/task-manager/src/task_manager/: __init__.py  main.py  models.py  store.py
cloud-native_ai/16-services-&-deployment-manifests/Services & Deployments/Kubernetes-Communication-Challenges/fastapi-apps/progress-tracker/: Dockerfile  Dockerfile3  Dockerfile4  k8s-pod.yaml  k8s-service.yaml  pyproject.toml
cloud-native_ai/16-services-&-deployment-manifests/Services & Deployments/Kubernetes-Communication-Challenges/fastapi-apps/progress-tracker/src/progress_tracker/: models.py
cloud-native_ai/FastAPI/FastAPI-Basics/: fastapi.skill  pyproject.toml
cloud-native_ai/FastAPI/FastAPI-Basics/.claude/skills/fastapi/scripts/: scaffold_project.py
hooks_extensions/study-notes/: CLAUDE.md
projecta1/GitHub_assistant/: github_assistant.txt
projecta1/cover_letter_generator/: readme.md
skills/ai-native-dev/: SKILL.md
skills/k8s-planning/: SKILL.md
spec-kit_plus/spec_test/: .gitignore  Calculator.md  pyproject.toml
spec-kit_plus/spec_test/docs/: RICH_RESEARCH_SUMMARY.md
spec-kit_plus/spec_test/history/prompts/001-cli-calculator/: 0001-create-cli-calculator-specification.spec.prompt.md  0002-create-cli-calculator-implementation-plan.plan.prompt.md  0003-generate-cli-calculator-tasks.tasks.prompt.md  0005-implement-phase-5-and-6-decimal-and-negative-numbers.green.prompt.md  0006-implement-phase-7-and-8-cli-integration-and-polish.green.prompt.md
spec-kit_plus/spec_test/history/prompts/002-rich-calculator-ui/: 0002-rich-calculator-ui-implementation-plan.plan.prompt.md  0004-phase-1-and-2-implementation.green.prompt.md
spec-kit_plus/spec_test/history/prompts/constitution/: 0001-create-python-calculator-constitution.constitution.prompt.md
spec-kit_plus/spec_test/specs/001-cli-calculator/: data-model.md  quickstart.md  spec.md
spec-kit_plus/spec_test/specs/001-cli-calculator/contracts/: calculator_api.md
spec-kit_plus/spec_test/specs/002-rich-calculator-ui/: tasks.md
spec-kit_plus/spec_test/specs/002-rich-calculator-ui/checklists/: requirements.md
spec-kit_plus/spec_test/specs/002-rich-calculator-ui/contracts/: ui_interface.md
spec-kit_plus/spec_test/src/calculator/: __init__.py  __main__.py  cli.py  operations.py  rich_cli.py  validator.py
spec-kit_plus/spec_test/src/calculator/ui/: menu.py  output.py
spec-kit_plus/spec_test/tests/: smoke_test.py
spec-kit_plus/spec_test/tests/integration/: test_cli_workflows.py  test_rich_cli.py
spec-kit_plus/spec_test/tests/unit/: test_operations.py  test_overflow.py  test_validator.py
spec-kit_plus/spec_test/tests/unit/ui/: test_history.py  test_menu.py  test_output.py
(+326 files in other folders)
