[project]
name = "fastapi-hello"
version = "0.1.0"
description = "Minimal FastAPI hello world"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "hello-fastapi/hello-fastapi",
]
