[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aajilani-dev", email = "aajilani.job@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
task-manager = "task_manager:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
