[project]
name = "progress-tracker"
version = "0.1.0"
description = "API for tracking task mutations from the Task Manager"
readme = "README.md"
authors = [
    { name = "aajilani-dev", email = "aajilani.job@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
progress-tracker = "progress_tracker:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
